Proyectos/Compi 2/src/Gramatica/GramaticaParser.java
// Generated from C:/Users/Carlos Rangel/Documents/GitHub/OLC2/src\Gramatica.g4 by ANTLR 4.10.1
package Gramatica;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GramaticaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, COMPLEX=41, INT=42, DECIMAL=43, STRING=44, COMMENT=45, 
		ID=46, MENORQUE=47, MAYORQUE=48, MENORIGUAL=49, MAYORIGUAL=50, IGUALACION=51, 
		DIFERENCIA=52, WS=53;
	public static final int
		RULE_start = 0, RULE_instrucciones = 1, RULE_instruccion = 2, RULE_program = 3, 
		RULE_subrutina = 4, RULE_lista_parametros = 5, RULE_call = 6, RULE_ldeclp = 7, 
		RULE_declaraciones_with_intent = 8, RULE_if_ = 9, RULE_else_if = 10, RULE_if_doble = 11, 
		RULE_if_else_doble = 12, RULE_if_triple = 13, RULE_if_else_triple = 14, 
		RULE_if_cuadruple = 15, RULE_if_else_cuadruple = 16, RULE_declara_default = 17, 
		RULE_declaracion = 18, RULE_lis_declararion = 19, RULE_asignacion = 20, 
		RULE_arreglos_dos_decla = 21, RULE_arreglos_declaracion = 22, RULE_dec_1D_arreglos = 23, 
		RULE_dec_allocate_1D = 24, RULE_dec_allocate_2D = 25, RULE_acceso_arreglo = 26, 
		RULE_asiganacion_2D = 27, RULE_asignacion_arreglos = 28, RULE_do = 29, 
		RULE_do_while = 30, RULE_dellocate_1D = 31, RULE_tipado_arreglos = 32, 
		RULE_tipo = 33, RULE_print = 34, RULE_exp = 35, RULE_expre2 = 36;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "instrucciones", "instruccion", "program", "subrutina", "lista_parametros", 
			"call", "ldeclp", "declaraciones_with_intent", "if_", "else_if", "if_doble", 
			"if_else_doble", "if_triple", "if_else_triple", "if_cuadruple", "if_else_cuadruple", 
			"declara_default", "declaracion", "lis_declararion", "asignacion", "arreglos_dos_decla", 
			"arreglos_declaracion", "dec_1D_arreglos", "dec_allocate_1D", "dec_allocate_2D", 
			"acceso_arreglo", "asiganacion_2D", "asignacion_arreglos", "do", "do_while", 
			"dellocate_1D", "tipado_arreglos", "tipo", "print", "exp", "expre2"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'program'", "'implicit'", "'none'", "'end'", "'subroutine'", "'('", 
			"')'", "','", "'call'", "'intent'", "'in'", "':'", "'if'", "'then'", 
			"'else'", "'='", "'dimension'", "'allocatable'", "'['", "']'", "'/'", 
			"'do'", "'while'", "'deallocate'", "'real'", "'integer'", "'character'", 
			"'complex'", "'logical'", "'print'", "'*'", "'.not.'", "'.and.'", "'.or.'", 
			"'**'", "'+'", "'-'", "'.true.'", "'.false.'", "'size'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "COMPLEX", "INT", "DECIMAL", "STRING", 
			"COMMENT", "ID", "MENORQUE", "MAYORQUE", "MENORIGUAL", "MAYORIGUAL", 
			"IGUALACION", "DIFERENCIA", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Gramatica.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GramaticaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			instrucciones();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstruccionesContext extends ParserRuleContext {
		public List<InstruccionContext> instruccion() {
			return getRuleContexts(InstruccionContext.class);
		}
		public InstruccionContext instruccion(int i) {
			return getRuleContext(InstruccionContext.class,i);
		}
		public InstruccionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrucciones; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitInstrucciones(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstruccionesContext instrucciones() throws RecognitionException {
		InstruccionesContext _localctx = new InstruccionesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instrucciones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			instruccion();
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__4) | (1L << T__8) | (1L << T__12) | (1L << T__21) | (1L << T__23) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << ID))) != 0)) {
				{
				{
				setState(77);
				instruccion();
				}
				}
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstruccionContext extends ParserRuleContext {
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public DoContext do_() {
			return getRuleContext(DoContext.class,0);
		}
		public Arreglos_declaracionContext arreglos_declaracion() {
			return getRuleContext(Arreglos_declaracionContext.class,0);
		}
		public Lis_declararionContext lis_declararion() {
			return getRuleContext(Lis_declararionContext.class,0);
		}
		public Asignacion_arreglosContext asignacion_arreglos() {
			return getRuleContext(Asignacion_arreglosContext.class,0);
		}
		public If_Context if_() {
			return getRuleContext(If_Context.class,0);
		}
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public If_dobleContext if_doble() {
			return getRuleContext(If_dobleContext.class,0);
		}
		public If_else_dobleContext if_else_doble() {
			return getRuleContext(If_else_dobleContext.class,0);
		}
		public Else_ifContext else_if() {
			return getRuleContext(Else_ifContext.class,0);
		}
		public If_tripleContext if_triple() {
			return getRuleContext(If_tripleContext.class,0);
		}
		public If_else_tripleContext if_else_triple() {
			return getRuleContext(If_else_tripleContext.class,0);
		}
		public If_cuadrupleContext if_cuadruple() {
			return getRuleContext(If_cuadrupleContext.class,0);
		}
		public If_else_cuadrupleContext if_else_cuadruple() {
			return getRuleContext(If_else_cuadrupleContext.class,0);
		}
		public Arreglos_dos_declaContext arreglos_dos_decla() {
			return getRuleContext(Arreglos_dos_declaContext.class,0);
		}
		public Declara_defaultContext declara_default() {
			return getRuleContext(Declara_defaultContext.class,0);
		}
		public Acceso_arregloContext acceso_arreglo() {
			return getRuleContext(Acceso_arregloContext.class,0);
		}
		public Asiganacion_2DContext asiganacion_2D() {
			return getRuleContext(Asiganacion_2DContext.class,0);
		}
		public Dec_1D_arreglosContext dec_1D_arreglos() {
			return getRuleContext(Dec_1D_arreglosContext.class,0);
		}
		public Dellocate_1DContext dellocate_1D() {
			return getRuleContext(Dellocate_1DContext.class,0);
		}
		public Dec_allocate_1DContext dec_allocate_1D() {
			return getRuleContext(Dec_allocate_1DContext.class,0);
		}
		public Dec_allocate_2DContext dec_allocate_2D() {
			return getRuleContext(Dec_allocate_2DContext.class,0);
		}
		public Do_whileContext do_while() {
			return getRuleContext(Do_whileContext.class,0);
		}
		public SubrutinaContext subrutina() {
			return getRuleContext(SubrutinaContext.class,0);
		}
		public CallContext call() {
			return getRuleContext(CallContext.class,0);
		}
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public InstruccionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruccion; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitInstruccion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstruccionContext instruccion() throws RecognitionException {
		InstruccionContext _localctx = new InstruccionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instruccion);
		try {
			setState(110);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(83);
				declaracion();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				print();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(85);
				do_();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(86);
				arreglos_declaracion();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(87);
				lis_declararion();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(88);
				asignacion_arreglos();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(89);
				if_();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(90);
				asignacion();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(91);
				if_doble();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(92);
				if_else_doble();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(93);
				else_if();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(94);
				if_triple();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(95);
				if_else_triple();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(96);
				if_cuadruple();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(97);
				if_else_cuadruple();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(98);
				arreglos_dos_decla();
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(99);
				declara_default();
				}
				break;
			case 18:
				enterOuterAlt(_localctx, 18);
				{
				setState(100);
				acceso_arreglo();
				}
				break;
			case 19:
				enterOuterAlt(_localctx, 19);
				{
				setState(101);
				asiganacion_2D();
				}
				break;
			case 20:
				enterOuterAlt(_localctx, 20);
				{
				setState(102);
				dec_1D_arreglos();
				}
				break;
			case 21:
				enterOuterAlt(_localctx, 21);
				{
				setState(103);
				dellocate_1D();
				}
				break;
			case 22:
				enterOuterAlt(_localctx, 22);
				{
				setState(104);
				dec_allocate_1D();
				}
				break;
			case 23:
				enterOuterAlt(_localctx, 23);
				{
				setState(105);
				dec_allocate_2D();
				}
				break;
			case 24:
				enterOuterAlt(_localctx, 24);
				{
				setState(106);
				do_while();
				}
				break;
			case 25:
				enterOuterAlt(_localctx, 25);
				{
				setState(107);
				subrutina();
				}
				break;
			case 26:
				enterOuterAlt(_localctx, 26);
				{
				setState(108);
				call();
				}
				break;
			case 27:
				enterOuterAlt(_localctx, 27);
				{
				setState(109);
				program();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(GramaticaParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(GramaticaParser.ID, i);
		}
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(T__0);
			setState(113);
			match(ID);
			setState(114);
			match(T__1);
			setState(115);
			match(T__2);
			setState(116);
			instrucciones();
			setState(117);
			match(T__3);
			setState(118);
			match(T__0);
			setState(119);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubrutinaContext extends ParserRuleContext {
		public Token id1;
		public Token id2;
		public Lista_parametrosContext lista_parametros() {
			return getRuleContext(Lista_parametrosContext.class,0);
		}
		public LdeclpContext ldeclp() {
			return getRuleContext(LdeclpContext.class,0);
		}
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(GramaticaParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(GramaticaParser.ID, i);
		}
		public SubrutinaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subrutina; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitSubrutina(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SubrutinaContext subrutina() throws RecognitionException {
		SubrutinaContext _localctx = new SubrutinaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_subrutina);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(T__4);
			setState(122);
			((SubrutinaContext)_localctx).id1 = match(ID);
			setState(123);
			match(T__5);
			setState(124);
			lista_parametros();
			setState(125);
			match(T__6);
			setState(126);
			match(T__1);
			setState(127);
			match(T__2);
			setState(128);
			ldeclp();
			setState(129);
			instrucciones();
			setState(130);
			match(T__3);
			setState(131);
			match(T__4);
			setState(132);
			((SubrutinaContext)_localctx).id2 = match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Lista_parametrosContext extends ParserRuleContext {
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public Lista_parametrosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lista_parametros; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitLista_parametros(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Lista_parametrosContext lista_parametros() throws RecognitionException {
		Lista_parametrosContext _localctx = new Lista_parametrosContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_lista_parametros);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			exp(0);
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__7) {
				{
				{
				setState(135);
				match(T__7);
				setState(136);
				exp(0);
				}
				}
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CallContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GramaticaParser.ID, 0); }
		public Lista_parametrosContext lista_parametros() {
			return getRuleContext(Lista_parametrosContext.class,0);
		}
		public CallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_call; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CallContext call() throws RecognitionException {
		CallContext _localctx = new CallContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_call);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(T__8);
			setState(143);
			match(ID);
			setState(144);
			match(T__5);
			setState(145);
			lista_parametros();
			setState(146);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LdeclpContext extends ParserRuleContext {
		public List<Declaraciones_with_intentContext> declaraciones_with_intent() {
			return getRuleContexts(Declaraciones_with_intentContext.class);
		}
		public Declaraciones_with_intentContext declaraciones_with_intent(int i) {
			return getRuleContext(Declaraciones_with_intentContext.class,i);
		}
		public LdeclpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ldeclp; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitLdeclp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LdeclpContext ldeclp() throws RecognitionException {
		LdeclpContext _localctx = new LdeclpContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ldeclp);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(149); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(148);
					declaraciones_with_intent();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(151); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaraciones_with_intentContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public Declaraciones_with_intentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaraciones_with_intent; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitDeclaraciones_with_intent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaraciones_with_intentContext declaraciones_with_intent() throws RecognitionException {
		Declaraciones_with_intentContext _localctx = new Declaraciones_with_intentContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_declaraciones_with_intent);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			tipo();
			setState(154);
			match(T__7);
			setState(155);
			match(T__9);
			setState(156);
			match(T__5);
			setState(157);
			match(T__10);
			setState(158);
			match(T__6);
			setState(159);
			match(T__11);
			setState(160);
			match(T__11);
			setState(161);
			exp(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class If_Context extends ParserRuleContext {
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public If_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitIf_(this);
			else return visitor.visitChildren(this);
		}
	}

	public final If_Context if_() throws RecognitionException {
		If_Context _localctx = new If_Context(_ctx, getState());
		enterRule(_localctx, 18, RULE_if_);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			match(T__12);
			setState(164);
			match(T__5);
			setState(165);
			exp(0);
			setState(166);
			match(T__6);
			setState(167);
			match(T__13);
			setState(168);
			instrucciones();
			setState(169);
			match(T__3);
			setState(170);
			match(T__12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
